welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:4: error: ';' expected but 'true' found.
 if (isFacingTrail()) == true {
                         ^